[package]
name = "eth-node-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
aes = "0.8.2"
sha3 = "0.10.6"
byteorder = "1.4.3"
ecb = "0.1.1"
snap = "1.1.0"
rlp = "0.5.2"
ctr = "0.9.2"
rand_core = "0.6.4"
arrayvec = "0.5"
hmac-sha256 = "1.1.6"
primitive-types = { version = "0.12.1", features = ["impl-rlp"] }
k256 = { version = "0.13", features = ["ecdh", "ecdsa-core", "arithmetic"] }
secp256k1 = { version = "0.27", features = ["recovery", "global-context"] }
postgres = { version = "0.19.4", features = ["with-serde_json-1"] }
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
